--- a/css/hotstyle.css
+++ b/css/hotstyle.css
@@ -996,9 +996,6 @@ div.pre-footer-button{
     margin-left: 90px;
     margin-right: 60px;
 }
-.last-trade{
-    margin-right: -105px;
-}
 .production{
     display: flex;
     align-items: flex-start;
@@ -1103,13 +1100,14 @@ div.production-btn{
     align-items: center;
     justify-content: center;
     width: 869px;
-    margin-right: 121px;
+    margin-right: 59px;
 }
 .news-anwrapper{
     display: flex;
     align-items: center;
     justify-content: center;
     max-width: 873px;
+    margin-left: 61px;
 }
 .news-wrapper-item{
     display: flex;
@@ -1137,6 +1135,7 @@ div.production-btn{
     font-weight: 500;
     text-transform: uppercase;
     padding-bottom: 21px;
+    padding-top: 30px;
 }
 .stock-img-description{
     margin-top: 35px;
