--- a/css/page.css
+++ b/css/page.css
@@ -2,6 +2,14 @@
     outline: none !important;
     box-sizing: border-box; 
 }
+.cls-1{fill: none;stroke:#e20514;stroke-miterlimit:5;stroke-width:2px;}
+.st0{fill: none;stroke:#e20413;stroke-width:2;stroke-miterlimit:10;}
+.st0{fill:none;stroke:#e20413;stroke-width:5;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;}
+.st1{fill:none;stroke:#e20413;stroke-width:5;stroke-linecap:round;stroke-linejoin:round;}
+.st2{fill:none;stroke:#e20413;stroke-width:5;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:0,6.6041;}
+:root{
+    --main-btn-color: #e20514;
+}
 a{
     text-decoration: none;
 }
@@ -1262,6 +1270,9 @@ div.mainp-text-grid{
 .main-title-b{
     display: none;
 }
+.bar-icon img{
+    fill: var(--main-btn-color);
+}
 @media screen and (max-width: 1876px){
 
     .arrows{
@@ -2059,6 +2070,12 @@ div.mainp-text-grid{
     }
     .news{
         margin-bottom: 0;
+    }
+    .goods__name-main {
+        font-size: 12px;
+    }
+    .owl-dots.set_down_slider {
+        bottom: -25px;
     }
 }
 @media screen and (max-width: 700px){
